--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "license": "proprietary",
   "type": "project",
   "description": "Filer bundle",
-
+  "target-dir": "Iad/Bundle/FilerTechBundle",
   "repositories": [
     {
       "type": "composer",
@@ -14,31 +14,34 @@
 
   "require": {
     "php": ">=5.6",
-    "symfony/symfony": "~2.7|~3.0",
-    "knplabs/knp-gaufrette-bundle": "~0.3|~0.5",
-    "liip/imagine-bundle": "~1.3|~2.0",
+    "symfony/symfony": "~3.4",
+    "knplabs/knp-gaufrette-bundle": "~0.5",
+    "liip/imagine-bundle": "~1.0",
 
     "iad-holding/core-bundle": "dev-project/AR-42-migration-sf3.4"
   },
 
   "require-dev": {
     "squizlabs/php_codesniffer": "~2.3.4",
-    "escapestudios/symfony2-coding-standard": "~2.7.0"
+    "escapestudios/symfony2-coding-standard": "~2.7.0",
+    "phpunit/phpunit": "~5.7",
+    "symfony/phpunit-bridge": "^4.1"
   },
 
   "autoload": {
-    "psr-4": {
-      "Iad\\Bundle\\FilerTechBundle\\": ""
+    "psr-0": {
+      "Iad\\Bundle\\FilerTechBundle": ""
     }
-  },
-  "autoload-dev": {
-      "psr-4": {
-          "Iad\\Bundle\\FilerTechBundle\\Tests\\": "Tests/"
-      }
   },
   "extra": {
     "branch-alias": {
       "dev-FILER-23-insert-2": "2.0.x-dev"
+    }
+  },
+  "config": {
+    "bin-dir": "bin",
+    "platform": {
+      "php": "5.6"
     }
   }
 }
