--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- https://phpunit.de/manual/5.7/en/appendixes.configuration.html -->
-<phpunit  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-          xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/5.7/phpunit.xsd"
-          backupGlobals="false"
-          colors="true"
-          bootstrap="vendor/autoload.php"
->
+<!-- http://phpunit.de/manual/4.1/en/appendixes.configuration.html -->
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.1/phpunit.xsd"
+         backupGlobals="false"
+         colors="true"
+         bootstrap="vendor/autoload.php"
+        >
     <testsuites>
         <testsuite name="Project Test Suite">
             <directory>Tests</directory>
@@ -14,17 +14,14 @@
         </testsuite>
     </testsuites>
 
-   <!--  <listeners>
-        <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
-    </listeners> -->
-
     <filter>
         <whitelist>
             <directory suffix=".php">.</directory>
             <exclude>
+                <directory>Controller</directory>
                 <directory>vendor</directory>
-                <directory>src/Bundle/*/DependencyInjection</directory>
-                <directory>src/Bundle/*/Command</directory>
+                <directory>Tests</directory>
+                <directory>DependencyInjection</directory>
             </exclude>
         </whitelist>
     </filter>
