--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -5,16 +5,7 @@ iad_filer_document_download:
     requirements:
         uuid: "[a-zA-Z0-9-]+"
 
-iad_filer_document_metadata:
-    path: /documents/{uuid}/metadata
-    defaults: { _controller: IadFilerTechBundle:Filer:getDocumentData }
-    methods: GET
-    requirements:
-        uuid: "[a-zA-Z0-9-]+"
-
-iad_filer_document_object:
-    path: /documents/{uuid}
-    defaults: { _controller: IadFilerTechBundle:Filer:getDocumentObject }
-    methods: GET
-    requirements:
-        uuid: "[a-zA-Z0-9-]+"
+iad_sponsorship_filer_rest:
+    prefix:   /filer
+    resource: "@IadFilerTechBundle/Resources/config/rest_routing.yml"
+    type:     rest
