--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "liip/imagine-bundle": "~1.3",
     "twig/twig": "~1.3",
     "symfony/http-foundation": "^2.7",
-    "iad-holding/core-bundle": "dev-develop"
+    "iad-holding/core-bundle": "dev-project/AR-42-migration-sf3.4"
   },
 
   "require-dev": {
