--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -6,25 +6,11 @@ iad_filer_tech:
             enable_private: true
             public_path: "%filer_channel_local_public_path%"
             private_path: "%filer_channel_local_private_path%"
-    avatar_filer:
+    picture_filer:
         channel: local
-        resizing_filters: ['small']
-        public_base_url: "%filer_avatar_base_url%"
-    realestate_picture_filer:
-        channel: local
-        resizing_filters: ['high']
-        watermark_filter: 'watermark'
+        filer_class: "%filer_class_mapping%"
+        resizing_filters: ['high', 'medium', 'small']
         public_base_url: "%filer_realestate_base_url%"
-    event_picture_filer:
-        channel: local
-        resizing_filters: ['high', 'medium']
-        public_base_url: "%filer_event_base_url%"
-    training_pole_picture_filer:
-        channel: local
-        resizing_filters: ['high', 'medium']
-        public_base_url: "%filer_training_pole_base_url%"
-    administrative_document_filer:
-        channel: local
 
 liip_imagine:
     driver: imagick
