Arrange configuration + add Test

--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -6,13 +6,14 @@ iad_filer_tech:
             enable_private: true
             public_path: "%filer_channel_local_public_path%"
             private_path: "%filer_channel_local_private_path%"
-    picture_filer:
-        channel: local
-        public_base_url: "%picture_filer.base_url%"
-        resizing_filters: ['high', 'medium', 'small']
 
-    document_filer:
-        channel: local
+#    picture_filer:
+#        channel: local
+#        public_base_url: "%picture_filer.base_url%"
+#        resizing_filters: []
+
+#    document_filer:
+#        channel: local
 
 liip_imagine:
     driver: imagick
