update liip & gaufrette version

--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
   "require": {
     "php": ">=5.6",
     "symfony/symfony": "~3.4.0",
-    "knplabs/knp-gaufrette-bundle": "~0.3",
-    "liip/imagine-bundle": "~2.0",
+    "knplabs/knp-gaufrette-bundle": "*",
+    "liip/imagine-bundle": "*",
     "twig/twig": "*",
     "symfony/http-foundation": "^3.4.0",
     "iad-holding/core-bundle": "dev-project/AR-42-migration-sf3.4"
